; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_bn_internal_test.c_test_is_composite_enhanced.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_bn_internal_test.c_test_is_composite_enhanced.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@composites = common dso_local global i32* null, align 8
@ctx = common dso_local global i32 0, align 4
@BN_PRIMETEST_PROBABLY_PRIME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @test_is_composite_enhanced to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_is_composite_enhanced(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %4, align 4
  store i32* null, i32** %5, align 8
  %6 = call i32* (...) @BN_new()
  store i32* %6, i32** %5, align 8
  %7 = call i64 @TEST_ptr(i32* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %30

9:                                                ; preds = %1
  %10 = load i32*, i32** %5, align 8
  %11 = load i32*, i32** @composites, align 8
  %12 = load i32, i32* %2, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i32, i32* %11, i64 %13
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @BN_set_word(i32* %10, i32 %15)
  %17 = call i64 @TEST_true(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %30

19:                                               ; preds = %9
  %20 = load i32*, i32** %5, align 8
  %21 = load i32, i32* @ctx, align 4
  %22 = call i32 @bn_miller_rabin_is_prime(i32* %20, i32 10, i32 %21, i32* null, i32 1, i32* %4)
  %23 = call i64 @TEST_true(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %19
  %26 = load i32, i32* %4, align 4
  %27 = load i32, i32* @BN_PRIMETEST_PROBABLY_PRIME, align 4
  %28 = call i64 @TEST_int_ne(i32 %26, i32 %27)
  %29 = icmp ne i64 %28, 0
  br label %30

30:                                               ; preds = %25, %19, %9, %1
  %31 = phi i1 [ false, %19 ], [ false, %9 ], [ false, %1 ], [ %29, %25 ]
  %32 = zext i1 %31 to i32
  store i32 %32, i32* %3, align 4
  %33 = load i32*, i32** %5, align 8
  %34 = call i32 @BN_free(i32* %33)
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i64 @TEST_ptr(i32*) #1

declare dso_local i32* @BN_new(...) #1

declare dso_local i64 @TEST_true(i32) #1

declare dso_local i32 @BN_set_word(i32*, i32) #1

declare dso_local i32 @bn_miller_rabin_is_prime(i32*, i32, i32, i32*, i32, i32*) #1

declare dso_local i64 @TEST_int_ne(i32, i32) #1

declare dso_local i32 @BN_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
